tempfile/derive_more/tests/compile_fail/try_from/union.rs
#[derive(derive_more::TryFrom)]
union Union {
    field: i32,
}

fn main() {}
